Demo workshop page

--- a/pages/index.html
+++ b/pages/index.html
@@ -1,2 +1,9 @@
 {{> hero }}
 {{> explainer }}
+<section class="ui section section-padding vertical ">
+  <div class="ui container">
+    <h2>Our demo workshop</h2>
+    <p>Follow along and learn how to make a pinhole camera smart in our first workshop.</p>
+    {{> demo_workshop_cta }}
+  </div>
+</section>
