--- a/pages/smart-pinhole-workshop.html
+++ b/pages/smart-pinhole-workshop.html
@@ -7,7 +7,7 @@ sub: Learn how to make a cardboard pinhole camera smart
 <div class="section">
 
   <video class="media media-floated" poster="/media/smart-pinhole-camera-setup.jpg" controls>
-    <source src="/media/smart-pinhole-camera-setup-243w.mp4" />
+    <source src="/media/smart-pinhole-camera-setup.mp4" />
   </video>
 
   <div class="demo-workshop-content">
@@ -22,28 +22,22 @@ sub: Learn how to make a cardboard pinhole camera smart
 
     <img src="/media/smart-pinhole-flow.svg" />
 
-
     <p>Our demo workshop teaches the basics of <a href="http://johnny-five.io">Johnny Five</a> to connect get an Arduino to read the current light level from a cheap light sensor. You'll then find out how to publish those readings over the internet where a web app will pick them up to display.</p>
 
-    <p>The video here shows the final result.</p>
+    <p>The video shows the final result.</p>
+
+    <h2>Use familiar tools</h2>
+    <p>Use the developer tools you know to learn something new. The workshop uses whichever development tools you're comfortable with so you can get started right away.</p>
+
+    <script type="text/javascript" src="https://asciinema.org/a/aixr9yy0hvpszyretakei56wy.js" id="asciicast-aixr9yy0hvpszyretakei56wy" async></script>
+
+    <h2>Arduino optional</h2>
+    <p>You can get started even without the camera or even the Arduino. The workshop can run mock versions of the Arduino in software on your laptop.</p>
+    <p>When you have the kit, you can use the same code for real.</p>
+
+    <h2>Try now and tell us what you think</h2>
+    {{> demo_workshop_cta }}
+
+    <p>We want feedback! <a href="mailto:hello@cardboardiot.com?subject=Demo+workshop+feedback">Let us know what you thought, good or bad</a>.</p>
   </div>
 </div>
-
-
-## Familiar tools
-
-Use the developer tools you know to learn something new.
-
-<script type="text/javascript" src="https://asciinema.org/a/aixr9yy0hvpszyretakei56wy.js" id="asciicast-aixr9yy0hvpszyretakei56wy" async></script>
-
-## Materials optional
-
-You can get started even without the camera or even the Arduino. The workshop creates mock versions of everything.
-
-<code>
-  npm install -g smart-pinhole-workshop
-</code>
-
-## Try it and give us feedback
-
-<a href="hello@cardboardiot.com">Drop us a line</a>
