--- a/pages/index.html
+++ b/pages/index.html
@@ -1,9 +1,11 @@
 {{> hero }}
 {{> explainer }}
-<section class="ui section section-padding vertical ">
+<section class="ui section section-padding section-link vertical ">
   <div class="ui container">
-    <h2>Our demo workshop</h2>
-    <p>Follow along and learn how to make a pinhole camera smart in our first workshop.</p>
-    {{> demo_workshop_cta }}
+    <a class="" href="/smart-pinhole-workshop">
+      <h2 class="section-primary">Our demo workshop</h2>
+      <p>Follow along and learn how to make a pinhole camera smart in our first workshop. Find out more.</p>
+      {{> demo_workshop_cta }}
+    </a>
   </div>
 </section>
