--- a/pages/smart-pinhole-workshop.html
+++ b/pages/smart-pinhole-workshop.html
@@ -14,7 +14,7 @@ sub: Learn how to make a cardboard pinhole camera smart
     <h2>Intro</h2>
     <p>This demo shows our approach to teaching full-stack Iot, from hardware to messaging to software.</p>
 
-    <p>We augment the excellent <a href="">Viddy pinhole camera</a> with a cheap light sensor that tells you how long to expose your image.</p>
+    <p>We augment the excellent <a href="http://thepopuppinholecompany.com/viddy">Viddy pinhole camera</a> with a cheap light sensor that tells you how long to expose your image.</p>
 
     <p>It's a workshop format similar to <a href="https://www.npmjs.com/package/nodebot-workshop">Nodebot workshop</a>.</p>
 
@@ -29,7 +29,7 @@ sub: Learn how to make a cardboard pinhole camera smart
     <h2>Use familiar tools</h2>
     <p>Use the developer tools you know to learn something new. The workshop uses whichever development tools you're comfortable with so you can get started right away.</p>
 
-    <script type="text/javascript" src="https://asciinema.org/a/aixr9yy0hvpszyretakei56wy.js" id="asciicast-aixr9yy0hvpszyretakei56wy" async></script>
+    <script type="text/javascript" src="https://asciinema.org/a/5czc0k4cfc0olq0ap1c5nm291.js" id="asciicast-5czc0k4cfc0olq0ap1c5nm291" async></script>
 
     <h2>Arduino optional</h2>
     <p>You can get started even without the camera or even the Arduino. The workshop can run mock versions of the Arduino in software on your laptop.</p>
