--- a/pages/index.html
+++ b/pages/index.html
@@ -1,11 +1,9 @@
 {{> hero }}
 {{> explainer }}
-<section class="ui section section-padding section-link vertical ">
+<section class="ui section section-padding vertical ">
   <div class="ui container">
-    <a class="" href="/smart-pinhole-workshop">
-      <h2 class="section-primary">Our demo workshop</h2>
-      <p>Follow along and learn how to make a pinhole camera smart in our first workshop. Find out more.</p>
-      {{> demo_workshop_cta }}
-    </a>
+    <h2 class="section-primary">Our demo workshop</h2>
+    <p><a href="https://github.com/CardboardIoT/smart-pinhole-workshop">Follow along and learn how to make a pinhole camera smart in our first workshop. Find out more.</a></p>
+    {{> demo_workshop_cta }}
   </div>
 </section>
