--- a/pages/index.html
+++ b/pages/index.html
@@ -2,8 +2,29 @@
 {{> explainer }}
 <section class="ui section section-padding vertical ">
   <div class="ui container">
-    <h2 class="section-primary">Our demo workshop</h2>
-    <p><a href="https://github.com/CardboardIoT/smart-pinhole-workshop">Follow along and learn how to make a pinhole camera smart in our first workshop. Find out more.</a></p>
-    {{> demo_workshop_cta }}
+    <h2 class="section-primary">Why?</h2>
+    <p>First, the internet worked on our desktops only. Then, it went mobile on our handsets with ‘Mobile first’ becoming the new mantra.</p>
+    <p>Now it’s literally in all the things!</p>
+    <p>As developers, how can we work with &amp; build connected smart things?</p>
+    <p>The best way to learn is by doing. Right now.</p>
+  </div>
+</section>
+
+<section class="ui section section-padding vertical ">
+  <div class="ui container">
+    <img src="/images/high-five.svg" />
+    <h2 class="section-primary">Send awesomes with The Two Awesome Kit</h2>
+    <p>Use sensors to figure out when a contact needs a cheer. With a tap send them an awesome.</p>
+    <p>Coming soon.</p>
+  </div>
+</section>
+
+<section class="ui section section-padding vertical ">
+  <div class="ui container">
+    <h2 class="section-primary">For now, learn how smart things work with our interactive JS workshop.</h2>
+    <a href="https://github.com/CardboardIoT/smart-pinhole-workshop">
+      <img src="/images/icon-github.svg" />
+    </a>
+    <p>Made with nodeschool and nodebot love.</p>
   </div>
 </section>
