--- a/pages/index.html
+++ b/pages/index.html
@@ -1,7 +1,7 @@
 {{> hero }}
 {{> explainer }}
 <section class="ui section section-padding vertical ">
-  <div class="ui container">
+  <div class="ui container why">
     <h2 class="section-primary">Why?</h2>
     <p>First, the internet worked on our desktops only. Then, it went mobile on our handsets with ‘Mobile first’ becoming the new mantra.</p>
     <p>Now it’s literally in all the things!</p>
